Closed
Bug 673713
Opened 14 years ago
Closed 14 years ago
TI: Assertion failure: id == MakeTypeId(cx, id), at jsinfer.cpp:2725
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
--
({0: 3});
({0: 3.14});
--
$ ./js -n test.js
Assertion failure: id == MakeTypeId(cx, id), at jsinfer.cpp:2725
Revision 4fbb36c1c9a3, 32-bit OS X.
Comment 1•14 years ago
|
||
When the same property pattern appears in multiple initializers except one uses an int and another uses a float, we use the same type object for the result and mark that property as possibly-float, but neglected to call MakeTypeId to canonicalize integer properties first.
http://hg.mozilla.org/projects/jaegermonkey/rev/bf459add722b
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•