[INFER] Add mising MakeTypeId when fixing properties in object literal types to double, bug 673713.